Fix Header z-index
Fix this to avoid the services card from overflowing ontop of it

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ header {
   /* outline: 1px solid var(--links); */
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 999;
   background-color: var(--main);
   box-shadow: var(--header-shadow);
 }
